--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
+    "prod": "serve -s dist",
     "deploy": "sh deploy.sh"
   },
   "dependencies": {
